fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -24,14 +24,17 @@ body{
   background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../images/lynda-sanchez-1334221-unsplash.jpg) center/cover fixed no-repeat;
   overflow-x: hidden;
 }
+html, body {
+  overflow-x:hidden
+} 
+/*  .ct {
 
-/*  .container-fluid {
-   padding-right:0;
-   padding-left:0;
-   margin-right:0;
-   margin-left:0;
-}
-*/
+
+   margin: 0  auto;
+   width: -webkit-fill-available;
+   overflow-x: hidden;
+
+} */
 /*  *{margin:0;padding:0} */
 
 
@@ -97,12 +100,22 @@ text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
   min-height: calc(100vh - 94px);
   /* min-height: 100vh; */
   min-width: 100vh;
+  -webkit-background-size:cover;
+-moz-background-size:cover;
+-o-background-size:cover;
   background-position:  center center;
   background-attachment: fixed;
   position: relative;
   text-align: center;
   align-items: center;
+
 }
+/* .container-fluid{
+  width: 100%;
+  text-align: center;
+  justify-content:center;
+} */
+
 
 .height-90{
   min-height: calc(100vh - 94px);
@@ -121,6 +134,9 @@ text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
   align-items: center;
 
 }
+
+
+/* .row:before, .row:after {display: none !important;} */
 
  /* .text-center {
   text-align: center;
